# uBible

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  COPYRIGHT  Makefile  README.md  bible.cpp  bible.h  bibleapp.cpp  bibleapp.h  biblechapter.cpp  biblechapter.h  festival.cpp  festival.h  main.cpp  manifest.json  model.json  module.cpp  module.h  resources.qrc  uBible.desktop  uBible.pro  uBible.qml  uBible.qmlproject  ubible-app.json
app/: CMakeLists.txt  uBible.desktop.in  uBible.qml  ubible.desktop.in  ubuntu-ui-extras
app/components/: ActionButton.qml  ActionPanel.qml  AudioPanel.qml  BibleVerse.qml  CMakeLists.txt  ColorizedImage.qml  ListHeader.qml  Location.qml  LocationPicker.qml  PickerModelBase.qml  PickerRow.qml  SearchView.qml  Sidebar.qml  SubtitledListItem.qml  VerseDelegate.qml
app/model/: CMakeLists.txt  Settings.qml
app/model/internal/: Settings.qml
app/tests/autopilot/: run
app/tests/autopilot/uBible/: __init__.py
app/tests/autopilot/uBible/main/: test_main.py
app/ui/: BibleInstallerPage.qml  BibleManagerPage.qml  BiblePage.qml  BibleView.qml  BookmarksPopover.qml  CMakeLists.txt  GoToDialog.qml  HomePage.qml  InstallPage.qml  NotesDialog.qml  QuickReferencePage.qml  ResourcesPage.qml  SearchPage.qml  SettingsPage.qml  SharePopover.qml  main.qml
backend/: CMakeLists.txt
backend/modules/uBible/: backend.cpp  backend.h  bible.cpp  bible.h  bibleapp.cpp  bibleapp.h  biblechapter.cpp  biblechapter.h  biblemanager.cpp  biblemanager.h  module.cpp  module.h  mytype.h  qmldir  remotebible.cpp  remotebible.h  searchtask.cpp  searchtask.h
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
components/: BiblePage.qml  BibleVerse.qml  GoToPopover.qml  HelloComponent.qml  HomePage.qml  NotesDialog.qml  SearchPage.qml
icons/: listen.xcf
po/: CMakeLists.txt
qml/uBible/: AudioPanel.qml  BiblePage.qml  BibleVerse.qml  BibleView.qml  BookmarksPopover.qml  GoToDialog.qml  GoToPopover.qml  HomePage.qml  Location.qml  LocationPicker.qml  NotesDialog.qml  QuickReferencePage.qml  ResourcesPage.qml  SearchPage.qml  SearchView.qml  SettingsPage.qml  SetttingsPage.qml  SetttingsSheet.qml  SharePopover.qml  Shortcut.qml  Sidebar.qml  VerseDelegate.qml  main.qml
tests/autopilot/: run
tests/autopilot/uitests/: __init__.py
tests/autopilot/uitests/main/: test_main.py
